--- a/AI visualization/hmm-react-app/src/Components/Common/Subsection/subsection.module.css
+++ b/AI visualization/hmm-react-app/src/Components/Common/Subsection/subsection.module.css
@@ -43,5 +43,15 @@
 
 .contentPart {
     padding: 20px 30px;
-    display: table-cell;
+
+    overflow-y: hidden;
+	max-height: 500px; /* approximate max height */
+
+	transition-property: all;
+	transition-duration: .5s;
+	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
+
+.slider.closed {
+	max-height: 0;
 }
