--- a/AI visualization/hmm-react-app/src/typography.css
+++ b/AI visualization/hmm-react-app/src/typography.css
@@ -8,6 +8,7 @@ body {
 
 p {
     line-height: 1.5rem;
+    color: #2d2d2d;
 }
 
 h1,
@@ -17,4 +18,8 @@ h4,
 h5 {
     font-weight: 300;
     text-align: center;
+}
+
+h1 {
+    color: #2d2d2d;
 }
