--- a/AI visualization/hmm-react-app/src/Components/Common/Subsection/subsection.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/Common/Subsection/subsection.module.scss
@@ -1,8 +1,15 @@
+$white: #fff;
+$borderRadius: 10px;
+$lightBlue: #43AFCA;
+$darkBlue: #287689;
+$darkBlueHover: #123741;
+
 .Subsection {
-    background-color: #fff;
+    background-color: $white;
     width: 750px;
     margin: 0 auto;
     border-radius: 10px;
+    margin-bottom: 60px;
 }
 
 .headerContainer {
@@ -13,25 +20,25 @@
 }
 
 .applyRadiusBottomRight {
-    border-bottom-right-radius: 10px;
+    border-bottom-right-radius: $borderRadius;
 }
 
 .applyRadiusBottomLeft {
-    border-bottom-left-radius: 10px;
+    border-bottom-left-radius: $borderRadius;
 }
 
 .headerPart {
-    background-color: #43AFCA;
-    color: #fff;
+    background-color: $lightBlue;
+    color: $white;
     padding: 10px 0;
-    border-top-left-radius: 10px;
+    border-top-left-radius: $borderRadius;
     transition: .2s;
 }
 
 .showHideContentToggler {
-    background-color: #287689;
+    background-color: $darkBlue;
     box-sizing: border-box;
-    border-top-right-radius: 10px;
+    border-top-right-radius: $borderRadius;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -51,16 +58,13 @@
 }
 
 .showHideContentToggler:hover {
-    background-color: #123741;
+    background-color: $darkBlueHover;
     cursor: pointer;
 }
 
 .contentPart {
     padding-left: 30px;
     padding-right: 30px;
-
     overflow-y: hidden;
-
-	/* transition-property: all; */
 	transition-duration: .7s;
 }
