--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/forwardAlgorithm.module.css
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/forwardAlgorithm.module.css
@@ -1,3 +1,9 @@
 .ForwardAlgorithm {
     padding-bottom: 50px;
 }
+
+.backgroundImage {
+    height: 100px;
+    width: 100%;
+    object-fit: cover;
+}
