--- a/AI visualization/hmm-react-app/src/Components/Common/Matrix/matrix.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/Common/Matrix/matrix.module.scss
@@ -4,7 +4,7 @@ $bracketHeight: 30px;
 $bracketWidth: 7px;
 
 
-.Vector {
+.Matrix {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,7 +20,6 @@ $bracketWidth: 7px;
     height: $bracketHeight;
     width: $bracketWidth;
     float: left;
-    // margin-right: 20px;
 }
 
 .rightBracket {
@@ -32,8 +31,20 @@ $bracketWidth: 7px;
     float: left;
 }
 
+.matrixContent {
+    display: table;
+    flex-direction: column;
+}
 
-.vectorElement {
-    display: inline;
-    float: left;
+.rowContainer {
+    display: table-row;
+    flex-direction: row;
+}
+
+.rowContainer div {
+    display: table-cell;
+    text-align: center;
+    vertical-align:middle;
+    line-height: 27px;
+    width: 50px;
 }
