--- a/AI visualization/hmm-react-app/src/typography.scss
+++ b/AI visualization/hmm-react-app/src/typography.scss
@@ -1,5 +1,6 @@
 * {
     font-family: 'Roboto', sans-serif;
+    color: #2d2d2d;
 }
 
 body {
@@ -18,8 +19,11 @@ h4,
 h5 {
     font-weight: 300;
     text-align: center;
+    color: #fff;
 }
 
 h1 {
     color: #2d2d2d;
 }
+
+
