Bland annat fixat exempelknappar

--- a/AI visualization/hmm-react-app/src/Components/Common/BackButton/backButton.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/Common/BackButton/backButton.module.scss
@@ -14,7 +14,7 @@
 }
 
 .BackButton:hover {
-    border-color:#123741;
+    background-color: #f8f8f8;
+    transform: scale(1.03);
     cursor: pointer;
-    transform: scale(1.05);
 }
