--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/forwardAlgorithm.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/forwardAlgorithm.module.scss
@@ -6,4 +6,12 @@
     height: 100px;
     width: 100%;
     object-fit: cover;
+    position: relative;
+    z-index: 5;
+}
+
+.homeButton {
+    margin: -60px auto 0 auto;
+    position: relative;
+    z-index: 10;
 }
