Nu kan man välja exempel

--- a/AI visualization/hmm-react-app/src/Components/Common/ExampleButtons/ExampleButton/exampleButton.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/Common/ExampleButtons/ExampleButton/exampleButton.module.scss
@@ -16,7 +16,7 @@
 .ExampleButton:hover {
     cursor: pointer;
     transform: scale(1.02);
-    border: 3px solid #6EC668;
+    // border: 3px solid #6EC668;
 }
 
 .ExampleButton p {
