--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/forwardAlgorithm.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/forwardAlgorithm.module.scss
@@ -15,3 +15,27 @@
     position: relative;
     z-index: 10;
 }
+
+.observationImageInText {
+    margin-right: 5px;
+    display: inline;
+    justify-content: center;
+} 
+
+.observationImageInText img {
+    height: 14px;
+}
+
+.imageInText {
+    display: inline;
+}
+
+.imageInText img {
+    height: 14px;
+}
+
+
+.oInText {
+    color: #43AFCA !important;
+    font-weight: 900;   
+}
