--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/forwardAlgorithm.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/forwardAlgorithm.module.scss
@@ -11,7 +11,7 @@
 }
 
 .homeButton {
-    margin: -60px auto 0 auto;
+    margin: -70px auto 0 auto;
     position: relative;
     z-index: 10;
 }
@@ -38,4 +38,8 @@
 .oInText {
     color: #43AFCA !important;
     font-weight: 900;   
+}
+
+.extraLineHeight {
+    margin-top: 10px;
 }
