--- a/AI visualization/hmm-react-app/src/Components/Common/Subsection/subsection.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/Common/Subsection/subsection.module.scss
@@ -7,15 +7,14 @@ $darkBlueHover: #123741;
 .Subsection {
     background-color: $white;
     width: 750px;
-    margin: 0 auto;
-    border-radius: 10px;
-    margin-bottom: 60px;
+    margin: 0 auto 50px auto;
+    border-radius: $borderRadius;
 }
 
 .headerContainer {
     display: grid;
     grid-template-columns: 700px 50px;
-    grid-template-rows: 50px;
+    grid-template-rows: auto;
     background-color: rgba(255, 255, 255, 0);
 }
 
