Fortsatt med att användaren kan göra eget exempel

--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/playAroundWithExamples.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/playAroundWithExamples.module.scss
@@ -10,9 +10,17 @@
     height: 2px;
     border-radius: 40px;
     background-color: #FFA500;
-    margin: 10px 0;
+    margin: 9px 0;
 }
 
 .alphaVisualizer {
+
+}
+
+.exampleSettings {
+
+}
+
+.matricesSettings {
 
 }
