--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/playAroundWithExamples.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/playAroundWithExamples.module.scss
@@ -13,6 +13,11 @@
     margin: 9px 0;
 }
 
+.UserExampleInputContainer {
+    display: flex;
+    align-items: center;
+}
+
 .alphaVisualizer {
 
 }
