--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/InputMatrix/inputMatrix.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/InputMatrix/inputMatrix.module.scss
@@ -56,6 +56,7 @@ $bracketWidth: 7px;
     height: 40px;
     box-sizing: border-box;
     font-size: 1.3rem;
+    transition: .2s;
 }
 
 
@@ -68,4 +69,5 @@ $bracketWidth: 7px;
     font-size: 1rem;
     font-weight: bold;
     color: #FFA500;
+    padding: 10px 0;
 }
