Hela forward algorithm klar

--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/InputVector/inputVector.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/InputVector/inputVector.module.scss
@@ -75,3 +75,7 @@ $bracketWidth: 7px;
     font-size: 1rem;
     padding: 10px 0;
 }
+
+.rowWarning {
+    background-color: rgba(255, 166, 0, 0.2);
+}
