--- a/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/InputMatrix/inputMatrix.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/ForwardAlgorithm/PlayAroundWithExamples/InputMatrix/inputMatrix.module.scss
@@ -71,3 +71,7 @@ $bracketWidth: 7px;
     color: #FFA500;
     padding: 10px 0;
 }
+
+.rowWarning {
+    background-color: rgba(255, 166, 0, 0.2);
+}
