--- a/AI visualization/hmm-react-app/src/typography.scss
+++ b/AI visualization/hmm-react-app/src/typography.scss
@@ -1,6 +1,8 @@
 * {
     font-family: 'Roboto', sans-serif;
     color: #2d2d2d;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -18,6 +20,10 @@ h3 {
     font-weight: 300;
     text-align: center;
     color: #fff;
+}
+
+h1 {
+    padding: 20px 0;
 }
 
 h4 {
