--- a/AI visualization/hmm-react-app/src/Components/HiddenMarkovModel/TheBasics/Theory/theory.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/HiddenMarkovModel/TheBasics/Theory/theory.module.scss
@@ -16,3 +16,9 @@
     position: relative;
     z-index: 10;
 }
+
+.listStyle {
+    display: inline-block;
+    list-style: disc;
+    margin-left: 10px;
+}
