--- a/AI visualization/hmm-react-app/src/Components/Common/Subsection/subsection.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/Common/Subsection/subsection.module.scss
@@ -5,43 +5,37 @@ $darkBlue: #287689;
 $darkBlueHover: #123741;
 
 .Subsection {
-    background-color: $white;
-    width: 750px;
+    width: 100%;
     margin: 0 auto 50px auto;
-    border-radius: $borderRadius;
+    border-radius: 0;
+    background-color: $white;
 }
 
 .headerContainer {
     display: grid;
-    grid-template-columns: 700px 50px;
-    grid-template-rows: auto;
-    background-color: rgba(255, 255, 255, 0);
+    grid-template-columns: 100% 0%;
+    grid-template-rows: 50px;
 }
 
+
 .applyRadiusBottomRight {
-    border-bottom-right-radius: $borderRadius;
+    border-bottom-right-radius: 0;
 }
 
 .applyRadiusBottomLeft {
-    border-bottom-left-radius: $borderRadius;
+    border-bottom-left-radius: 0;
 }
 
 .headerPart {
     background-color: $lightBlue;
     color: $white;
     padding: 10px 0;
-    border-top-left-radius: $borderRadius;
+    border-top-left-radius: 0;
     transition: .2s;
 }
 
 .showHideContentToggler {
-    background-color: $darkBlue;
-    box-sizing: border-box;
-    border-top-right-radius: $borderRadius;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    transition: .2s;
+    display: none;
 }
 
 .showHideContentToggler img {
@@ -65,13 +59,64 @@ $darkBlueHover: #123741;
     padding-left: 30px;
     padding-right: 30px;
     overflow-y: hidden;
-	transition-duration: .7s;
+    transition-duration: .7s;
 }
 
-.exampleModeHover {
-    background-color: #4E8F4A;
-}
 
-.exampleModeHover:hover {
-    background-color: #214b1f;
+@media (min-width: 850px) {
+    .Subsection {
+        width: 750px;
+        background-color: rgba(255, 255, 255, 0);
+        margin: 0 auto 50px auto;
+        border-radius: $borderRadius;
+    }
+
+    .headerContainer {
+        display: grid;
+        grid-template-columns: 700px 50px;
+        grid-template-rows: 50px;
+        background-color: rgba(255, 255, 255, 0);
+    }
+
+    .contentPart {
+        padding-left: 30px;
+        padding-right: 30px;
+        overflow-y: hidden;
+        transition-duration: .7s;
+        opacity: 0.0;
+    }
+
+    .headerPart {
+        border-top-left-radius: $borderRadius;
+    }
+
+    .showHideContentToggler {
+        border-top-right-radius: $borderRadius;
+    }
+
+    .applyRadiusBottomRight {
+        border-bottom-right-radius: $borderRadius;
+    }
+    
+    .applyRadiusBottomLeft {
+        border-bottom-left-radius: $borderRadius;
+    }
+
+    .showHideContentToggler {
+        background-color: $darkBlue;
+        box-sizing: border-box;
+        border-top-right-radius: $borderRadius;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        transition: .2s;
+    }
+
+    .exampleModeHover {
+        background-color: #4E8F4A;
+    }
+    
+    .exampleModeHover:hover {
+        background-color: #214b1f;
+    }
 }
