Klar med teoridelen, har också gjort så man ser vilka delar som är klara på sidan och inte

--- a/AI visualization/hmm-react-app/src/typography.scss
+++ b/AI visualization/hmm-react-app/src/typography.scss
@@ -79,3 +79,8 @@ mark.orange {
     color: $orangeColor;
     background: none;
 }
+
+.linkStyle {
+    text-decoration: underline;
+    color: $orangeColor;
+}
