--- a/AI visualization/hmm-react-app/src/Components/Common/SectionCard/sectionCard.module.scss
+++ b/AI visualization/hmm-react-app/src/Components/Common/SectionCard/sectionCard.module.scss
@@ -15,6 +15,11 @@
     user-select: none;
 }
 
+.inActiveSectionCard {
+    border: 4px solid rgb(126, 126, 126);
+    opacity: 0.6;
+}
+
 .SectionCard:hover {
     transform: scale(1.03);
     cursor: pointer;
