--- a/AI visualization/hmm-react-app/src/typography.scss
+++ b/AI visualization/hmm-react-app/src/typography.scss
@@ -84,3 +84,18 @@ mark.orange {
     text-decoration: underline;
     color: $orangeColor;
 }
+
+img.backgroundImage {
+    height: 100px;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+    z-index: 5;
+    user-select: none;
+}
+
+ul.greenList {
+    display: inline-block;
+    list-style: disc;
+    margin-left: 10px;
+}
