Finished with the runner example

--- a/hmm-react-app/src/Components/HiddenMarkovModel/TheBasics/RunnerExample/runnerExample.module.scss
+++ b/hmm-react-app/src/Components/HiddenMarkovModel/TheBasics/RunnerExample/runnerExample.module.scss
@@ -3,3 +3,11 @@
     position: relative;
     z-index: 10;
 }
+
+.intuitiveMeaning {
+    list-style: none;
+}
+
+.intuitiveMeaning li:not(:first-child) {
+    margin-top: 20px;
+}
